--- a/src/pages/Appointments/Appointments.css
+++ b/src/pages/Appointments/Appointments.css
@@ -1,10 +1,10 @@
 .appointmentsDesign {
     width: auto;
     background-color: rgb(247, 243, 231);
-    display: flex;
-    flex-direction: row;
-    justify-content:space-evenly;
-    align-items: center;
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* justify-content:space-evenly; */
+    /* align-items: center; */
     text-align: left;
     color: rgb(66, 103, 123);
     font-weight: bolder;
@@ -14,7 +14,7 @@
 .thisCard {
     margin-top: 2em;
     margin-bottom: 2em;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    /* display: grid;
+    grid-template-columns: repeat(4, 1fr); */
     font-size: small;
 }
