--- a/src/pages/Users/Users.css
+++ b/src/pages/Users/Users.css
@@ -28,7 +28,8 @@
     }
   
     .thisCard {
-      grid-template-columns: repeat(1, 1fr);
+      display: flex;
+      flex-direction: column;
       font-size: smaller;
     }
   }
